[package]
name = "rong_arkjs"
version.workspace = true
edition.workspace = true

description = "ArkJS backend for RongJS"
license.workspace = true
repository.workspace = true
readme = "README.md"
publish = false
[lib]
test = false
doctest = false

[dependencies]
rong_arkjs_sys = { workspace = true }
rong_core = { workspace = true }
