[package]
name = "rong_arkjs"
version.workspace = true
edition.workspace = true

description = "ArkJS backend for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rong_arkjs"
rust-version.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[lib]
test = false
doctest = false

[dependencies]
rong_arkjs_sys = { workspace = true }
rong_core = { workspace = true }
