[package]
name = "rong_core"
version.workspace = true
edition.workspace = true

description = "Core runtime types for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
