[package]
name = "rong_core"
version = "0.4.0"
edition.workspace = true

description = "Core runtime types for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_core"
readme = "README.md"

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rong_rt = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
