[package]
name = "examples"
version.workspace = true
edition.workspace = true

description = "Examples for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
[dependencies]
rong = { workspace = true }
rong_modules = { workspace = true }
tokio = { workspace = true }

[features]
# Build examples out-of-the-box using QuickJS.
# To build with JavaScriptCore/ArkJS instead, use:
# - `cargo build -p examples --no-default-features --features jscore`
# - `cargo build -p examples --no-default-features --features arkjs`
default = ["quickjs"]
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]

[[example]]
name = "worker"
path = "src/worker.rs"

[[example]]
name = "point"
path = "src/point.rs"
