[package]
name = "examples"
version.workspace = true
edition.workspace = true

description = "Examples for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false
[dependencies]
rong = { workspace = true }
rong_modules = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"

[features]
# Out-of-the-box build uses QuickJS + aws-lc TLS.
# Switching engine requires `--no-default-features`.
default = ["quickjs", "tls-aws-lc"]
quickjs = ["rong/quickjs", "rong_modules/quickjs", "rong_modules/all"]
jscore = ["rong/jscore", "rong_modules/jscore", "rong_modules/all"]
arkjs = ["rong/arkjs", "rong_modules/arkjs", "rong_modules/all"]
tls-aws-lc = ["rong_modules/tls-aws-lc"]
tls-ring = ["rong_modules/tls-ring"]

[[example]]
name = "worker"
path = "src/worker.rs"

[[example]]
name = "point"
path = "src/point.rs"

[[example]]
name = "executor"
path = "src/executor.rs"
