[package]
name = "rong_jscore"
version.workspace = true
edition.workspace = true

description = "JavaScriptCore backend for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_jscore"
readme = "README.md"
[dependencies]
rong_jscore_sys = { workspace = true }
rong_core = { workspace = true }
smallvec = { workspace = true }
