[package]
name = "rong_macro"
version.workspace = true
edition.workspace = true
description = "Macro system for RongJS to help expose Rust types to JavaScript"

license.workspace = true
repository.workspace = true
readme.workspace = true
[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
