[package]
name = "rong_macro"
version.workspace = true
edition.workspace = true
description = "Macro system for RongJS to help expose Rust types to JavaScript"

license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/rong_macro"
readme = "README.md"
[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
