[package]
name = "rong_cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "rong"
path = "src/main.rs"
[dependencies]
dirs = "6.0.0"
rong = { workspace = true }
rong_modules = { workspace = true, features = ["all"] }
rustyline = "17.0.2"

[features]
# Forward JS engine features to the main rong crate
default = ["quickjs"]
quickjs = ["rong/quickjs"]
jscore = ["rong/jscore"]
arkjs = ["rong/arkjs"]
