[package]
name = "rong_cli"
version.workspace = true
edition.workspace = true
description = "Command-line interface for RongJS"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/rong_cli"
readme.workspace = true

[[bin]]
name = "rong"
path = "src/main.rs"
[dependencies]
dirs = "6.0.0"
rong = { workspace = true }
rong_console = { workspace = true }
rong_modules = { workspace = true, features = ["all"] }
rustyline = "18.0.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# CLI owns the runtime/TLS choice for the full dependency graph.
# Switching engine/backend requires `--no-default-features`.
default = ["quickjs", "tls-aws-lc"]
quickjs = ["rong/quickjs", "rong_console/quickjs", "rong_modules/quickjs", "rong_modules/all"]
jscore = ["rong/jscore", "rong_console/jscore", "rong_modules/jscore", "rong_modules/all"]
arkjs = ["rong/arkjs", "rong_modules/arkjs", "rong_modules/all"]
tls-aws-lc = ["rong/tls-aws-lc", "rong_modules/tls-aws-lc"]
tls-ring = ["rong/tls-ring", "rong_modules/tls-ring"]
