[package]
name = "rong_modules"
version.workspace = true
edition.workspace = true

description = "Module bundle for RongJS"
license.workspace = true
repository.workspace = true
readme.workspace = true
[dependencies]
rong = { workspace = true }
rong_timer = { workspace = true, optional = true }
rong_http = { workspace = true, optional = true, default-features = false }
rong_encoding = { workspace = true, optional = true }
rong_event = { workspace = true, optional = true }
rong_assert = { workspace = true, optional = true }
rong_exception = { workspace = true, optional = true }
rong_abort = { workspace = true, optional = true }
rong_console = { workspace = true, optional = true }
rong_url = { workspace = true, optional = true }
rong_buffer = { workspace = true, optional = true }
rong_fs = { workspace = true, optional = true }
rong_storage = { workspace = true, optional = true }
rong_stream = { workspace = true, optional = true }
rong_process = { workspace = true, optional = true }
rong_child_process = { workspace = true, optional = true }
rong_redis = { workspace = true, optional = true }
rong_sqlite = { workspace = true, optional = true }
rong_worker = { workspace = true, optional = true }

[features]
default = []

quickjs = [
    "rong/quickjs",
    "rong_timer?/quickjs",

    "rong_http?/quickjs",
    "rong_encoding?/quickjs",
    "rong_event?/quickjs",
    "rong_assert?/quickjs",
    "rong_exception?/quickjs",
    "rong_abort?/quickjs",
    "rong_console?/quickjs",
    "rong_url?/quickjs",
    "rong_buffer?/quickjs",
    "rong_fs?/quickjs",
    "rong_storage?/quickjs",
    "rong_stream?/quickjs",
    "rong_process?/quickjs",
    "rong_child_process?/quickjs",
    "rong_redis?/quickjs",
    "rong_sqlite?/quickjs",
    "rong_worker?/quickjs",
]
jscore = [
    "rong/jscore",
    "rong_timer?/jscore",

    "rong_http?/jscore",
    "rong_encoding?/jscore",
    "rong_event?/jscore",
    "rong_assert?/jscore",
    "rong_exception?/jscore",
    "rong_abort?/jscore",
    "rong_console?/jscore",
    "rong_url?/jscore",
    "rong_buffer?/jscore",
    "rong_fs?/jscore",
    "rong_storage?/jscore",
    "rong_stream?/jscore",
    "rong_process?/jscore",
    "rong_child_process?/jscore",
    "rong_redis?/jscore",
    "rong_sqlite?/jscore",
    "rong_worker?/jscore",
]
arkjs = [
    "rong/arkjs",
    "rong_timer?/arkjs",

    "rong_http?/arkjs",
    "rong_encoding?/arkjs",
    "rong_event?/arkjs",
    "rong_assert?/arkjs",
    "rong_exception?/arkjs",
    "rong_abort?/arkjs",
    "rong_console?/arkjs",
    "rong_url?/arkjs",
    "rong_buffer?/arkjs",
    "rong_fs?/arkjs",
    "rong_storage?/arkjs",
    "rong_stream?/arkjs",
    "rong_process?/arkjs",
    "rong_child_process?/arkjs",
    "rong_redis?/arkjs",
    "rong_sqlite?/arkjs",
    "rong_worker?/arkjs",
]
tls-aws-lc = ["rong_http?/tls-aws-lc"]
tls-ring = ["rong_http?/tls-ring"]

all = [
    "timer",
    "http",
    "encoding",
    "event",
    "assert",
    "exception",
    "abort",
    "console",
    "url",
    "buffer",
    "fs",
    "storage",
    "stream",
    "process",
    "child_process",
    "redis",
    "sqlite",
    "worker",
]

timer = ["rong_timer"]
http = ["rong_http"]
encoding = ["rong_encoding"]
event = ["rong_event"]
assert = ["rong_assert"]
exception = ["rong_exception"]
abort = ["rong_abort"]
console = ["rong_console"]
url = ["rong_url"]
buffer = ["rong_buffer"]
fs = ["rong_fs"]
storage = ["rong_storage"]
stream = ["rong_stream"]
process = ["rong_process"]
child_process = ["rong_child_process"]
redis = ["rong_redis"]
sqlite = ["rong_sqlite"]
worker = ["rong_worker"]
